--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt-contrib-watch": "^1.1.0"
   },
   "dependencies": {
-    "js-yaml": "^3.13.1"
+    "js-yaml": "^3.13.1",
+    "lodash": "^4.17.14"
   }
 }
